--- a/01_models_inputs_outputs/01_notes.ipynb
+++ b/01_models_inputs_outputs/01_notes.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "ff9ab0d6",
    "metadata": {},
    "outputs": [],
@@ -30,11 +30,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "d4b37347",
+   "cell_type": "markdown",
+   "id": "5dd02447",
    "metadata": {},
-   "outputs": [],
    "source": [
     "response = openai.Completion.create(\n",
     "    model=\"text-davinci-003\",\n",
@@ -747,9 +745,334 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4be1da65",
+   "metadata": {},
+   "source": [
+    "## Few Shot Prompt Template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d3a75d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2880b94a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat = ChatOpenAI(openai_api_key=api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e2c7af82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts.chat import ChatPromptTemplate, SystemMessagePromptTemplate, HumanMessagePromptTemplate, AIMessagePromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fd831243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AI BOT can explain legal document in simple terms.\n",
+    "system_template = \"You are a helpful legal assistant that translates complex legal terms into plain and understandable terms.\"\n",
+    "\n",
+    "system_message_prompt = SystemMessagePromptTemplate.from_template(system_template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0d70bfef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legal_text = \"The provisions herein shall be severable, and if any provision or portion thereof is deemed invalid, illegal, or unenforceable by a court of competent jurisdiction, the remaining provisions or portions thereof shall remain in full force and effect to the maximum extent permitted by law.\"\n",
+    "example_input_one = HumanMessagePromptTemplate.from_template(legal_text)\n",
+    "\n",
+    "plain_text = \"The rules in this agreement can be separated. If a court decides that one rule or part of it is not valid, illegal, or cannot be enforced, the other rules will still apply and be enforced as much as they can under the law.\"\n",
+    "example_output_one = AIMessagePromptTemplate.from_template(plain_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3365f818",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "human_template = \"{legal_text}\"\n",
+    "human_message_prompt = HumanMessagePromptTemplate.from_template(human_template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6a22467c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [system_message_prompt, example_input_one, example_output_one, human_message_prompt]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d6d57862",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['legal_text']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_prompt.input_variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "dd3ff72a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_text = \"The grantor, being the fee simple owner of the real property herein described, conveys and warrants to the grantee, his heirs and assigns, all of the grantor's right, title, and interest in and to the said property, subject to all existing encumbrances, liens, and easements, as recorded in the official records of the county, and any applicable covenants, conditions, and restrictions affecting the property, in consideration of the sum of [purchase price] paid by the grantee.\"\n",
+    "\n",
+    "request = chat_prompt.format_prompt(legal_text=example_text).to_messages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8b12bf48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='You are a helpful legal assistant that translates complex legal terms into plain and understandable terms.', additional_kwargs={}),\n",
+       " HumanMessage(content='The provisions herein shall be severable, and if any provision or portion thereof is deemed invalid, illegal, or unenforceable by a court of competent jurisdiction, the remaining provisions or portions thereof shall remain in full force and effect to the maximum extent permitted by law.', additional_kwargs={}, example=False),\n",
+       " AIMessage(content='The rules in this agreement can be separated. If a court decides that one rule or part of it is not valid, illegal, or cannot be enforced, the other rules will still apply and be enforced as much as they can under the law.', additional_kwargs={}, example=False),\n",
+       " HumanMessage(content=\"The grantor, being the fee simple owner of the real property herein described, conveys and warrants to the grantee, his heirs and assigns, all of the grantor's right, title, and interest in and to the said property, subject to all existing encumbrances, liens, and easements, as recorded in the official records of the county, and any applicable covenants, conditions, and restrictions affecting the property, in consideration of the sum of [purchase price] paid by the grantee.\", additional_kwargs={}, example=False)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c0620cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = chat(request)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ff7a474f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The person giving this property, who owns it completely, is transferring all their rights, ownership, and interest in the property to the person receiving it, along with any existing burdens, debts, and restrictions that are recorded in the county's official records. This transfer is being done in exchange for the amount of money specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7be16bcf",
+   "metadata": {},
+   "source": [
+    "## Parsing Outputs\n",
+    "\n",
+    "* Often when connecting LLM output you need it in a particular format (for example, a JSON object)\n",
+    "* Langchain comes with Parse utlities allowing you to easily convert outputs into precise data types or even your own custom class instances with Pydantic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "07e8c62d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts.chat import ChatPromptTemplate, SystemMessagePromptTemplate, HumanMessagePromptTemplate, AIMessagePromptTemplate\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.chat_models import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "09f9ee5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ChatOpenAI(openai_api_key=api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "58b01836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# STEP ONE ---> Import Parser\n",
+    "from langchain.output_parsers import CommaSeparatedListOutputParser\n",
+    "output_parser = CommaSeparatedListOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b532f023",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['red', 'blue', 'green']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# STEP TWO ---> Format Instructions\n",
+    "reply = \"red, blue, green\"\n",
+    "output_parser.parse(reply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "caa271a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "human_template = \"{request}\\n{format_instructions}\"\n",
+    "human_prompt = HumanMessagePromptTemplate.from_template(human_template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "50d9e7eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_prompt = ChatPromptTemplate.from_messages([human_prompt])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "ba5340a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_request = chat_prompt.format_prompt(request=\"Give me 5 characteristics of dogs\", format_instructions=output_parser.get_format_instructions()).to_messages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "da5e3243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = model(model_request)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "48e96d48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Loyal, playful, affectionate, protective, social'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "0b366b52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Loyal', 'playful', 'affectionate', 'protective', 'social']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_parser.parse(result.content)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "523deb17",
+   "id": "3353f24e",
    "metadata": {},
    "outputs": [],
    "source": []
