--- a/01_models_inputs_outputs/Prompts-and-Model-Exercise.ipynb
+++ b/01_models_inputs_outputs/Prompts-and-Model-Exercise.ipynb
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a7bfe8c0",
+   "id": "e0a45af2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4b0d847a",
+   "id": "3eb20e1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "171f3e1a",
+   "id": "5d29dbb5",
    "metadata": {},
    "outputs": [
     {
@@ -236,10 +236,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "f7e240b6-96cf-4163-ad19-90a44cf7ef24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sure! Here's an example itinerary for a fishing trip on a budget of $10,000:\n",
+      "\n",
+      "Day 1: Arrival in Anchorage, Alaska\n",
+      "- Fly into Anchorage and check into a mid-range hotel.\n",
+      "- Spend the day exploring the city and preparing for the fishing adventure.\n",
+      "\n",
+      "Day 2-4: Kenai River Fishing\n",
+      "- Take a scenic drive to the Kenai Peninsula.\n",
+      "- Stay in a comfortable lodge near the Kenai River.\n",
+      "- Enjoy guided fishing excursions on the Kenai River for salmon and trout.\n",
+      "- Experience the thrill of catching trophy-sized fish.\n",
+      "- Take in the beautiful scenery of the surrounding mountains and wildlife.\n",
+      "- Enjoy freshly prepared meals at the lodge.\n",
+      "\n",
+      "Day 5-7: Lake Guntersville Fishing\n",
+      "- Fly to Alabama and rent a car to reach Lake Guntersville.\n",
+      "- Stay at a budget-friendly fishing cabin or campsite near the lake.\n",
+      "- Spend the days fishing for largemouth bass on Lake Guntersville.\n",
+      "- Explore the nearby state parks and hiking trails during downtime.\n",
+      "- Enjoy local cuisine at affordable restaurants.\n",
+      "\n",
+      "Day 8-10: Florida Keys Fishing\n",
+      "- Fly to Miami and rent a car to drive down to the Florida Keys.\n",
+      "- Stay at a budget-friendly beachfront hotel or guesthouse.\n",
+      "- Enjoy guided fishing charters in the Florida Keys, targeting species like tarpon, bonefish, and snook.\n",
+      "- Relax on the beautiful beaches during leisure time.\n",
+      "- Savor delicious seafood at local seafood shacks and eateries.\n",
+      "\n",
+      "Day 11: Departure\n",
+      "- Return to Miami for your departure flight.\n",
+      "\n",
+      "This example itinerary includes flights, accommodations, guided fishing trips, and some meals. Prices may vary depending on the time of year, accommodation choices, and specific fishing charters selected. Be sure to check for any additional costs such as fishing licenses and gear rentals.\n"
+     ]
+    }
+   ],
    "source": [
     "print(travel_idea('fishing','$10,000'))"
    ]
@@ -247,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3803e18e",
+   "id": "0baa19fa",
    "metadata": {},
    "outputs": [],
    "source": []
