--- a/01_models_inputs_outputs/01_notes.ipynb
+++ b/01_models_inputs_outputs/01_notes.ipynb
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "0b366b52",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1060,7 @@
        "['Loyal', 'playful', 'affectionate', 'protective', 'social']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,9 +1070,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d3cdbdc",
+   "metadata": {},
+   "source": [
+    "## Datetime Parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "ce252175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.output_parsers import DatetimeOutputParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "558068c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_parser = DatetimeOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "5f3241bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template_text = \"{request}\\n{format_instructions}\"\n",
+    "\n",
+    "human_prompt = HumanMessagePromptTemplate.from_template(template_text)\n",
+    "# system_prompt = SystemMessagePromptTemplate.from_template(\"You always reply to questions only in datetime patterns\")\n",
+    "\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([human_prompt])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "e5635fc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request=\"What date was the 13th Amendment ratified in the US?\"\n",
+    "parser = output_parser.get_format_instructions()\n",
+    "\n",
+    "model_request = chat_prompt.format_prompt(request=request, format_instructions=parser).to_messages()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "f05ed3cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = model(model_request, temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "2c0d8d20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The 13th Amendment was ratified in the US on December 6, 1865.\\n\\nThe datetime string that matches the given pattern is: \"1865-12-06T00:00:00.000000Z\"'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "6ace3d84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.output_parsers import OutputFixingParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "bb4ce6f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The 13th Amendment was ratified in the US on December 6, 1865.\\n\\nThe datetime string that matches the given pattern is: \"1865-12-06T00:00:00.000000Z\"'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "misformatted = result.content\n",
+    "misformatted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "70ee309c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_parser = OutputFixingParser.from_llm(parser=output_parser, llm=model)\n",
+    "# new_parser.parse(misformatted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f38a7cab",
+   "metadata": {},
+   "source": [
+    "## Saving & Loading Templates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3353f24e",
+   "id": "62e4a9d2",
    "metadata": {},
    "outputs": [],
    "source": []
